--- a/main.html
+++ b/main.html
@@ -11,8 +11,10 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<p>Accio ipsum dolor sit amet, join course, solve assignments, 
-		get placed above 5 lpa and live life king size</p>
+		get placed above 5 lpa and live life king size
+	</p>
 
 </body>
+</html>
 
 </html>
